name:                webwatch
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jw3126/webwatch#readme
license:             BSD3
license-file:        LICENSE
author:              Jan Weidner
maintainer:          jw3123@gmail.com
copyright:           Jan Weidner
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable webwatch-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , webwatch
                     , text
                     , configurator
                     , unordered-containers
                     , mtl
  default-language:    Haskell2010

test-suite webwatch-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , webwatch
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jw3126/webwatch
